--- a/main.html
+++ b/main.html
@@ -35,7 +35,7 @@
     </div>
   </header>
   <section class="top">
-    <img src="./img/S__39526417.jpg" alt="noazami-円陣">
+    <img src="https://github.com/Yamashita-Taiki/new_noazami-ssite/blob/master/img/S__39526417.jpg?raw=true" alt="noazami-円陣">
 
   </section>
 
